--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 										With Python</a></h2>
 									</header>
 									<a href="https://github.com/alansantos29/Data-Analysis-Projects/blob/main/CryptoApiAutomation.ipynb" class="image fit"><img src="images/crypto.jpg" alt="" /></a>
-									<p>In this project we Automated Crypto Website API pull and storage in a csv document. We also cleaned the data
+									<p>In this project, we Automated Crypto Website API pull and storage from a DeFi website into a csv document. We also cleaned the data
 										and created visualisations using Python.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/alansantos29/Data-Analysis-Projects/blob/main/CryptoApiAutomation.ipynb" class="button">View Project</a></li>
