--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 										With Python</a></h2>
 									</header>
 									<a href="https://github.com/alansantos29/Data-Analysis-Projects/blob/main/Insurance%20Data%20Analysis%20Project%20Python.ipynb" class="image fit"><img src="images/insurance.jpg" alt="" /></a>
-									<p> In this project we used insurance data, to predict customer charges based on given variables using Python.</p>
-									<ul class="actions special">
+									<p> In this project we to predicted customer's charges for an insurance company based on their medical costs. So that the company can decide how much to charge people correctly, using Python.</p>
+									<ul class="actions special">to predict customer charges for an insurance company based on given variables. So that the company can decide how much they charge people correctly.
 										<li><a href="https://github.com/alansantos29/Data-Analysis-Projects/blob/main/Insurance%20Data%20Analysis%20Project%20Python.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
